--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -35,17 +35,31 @@ h1 {
   line-height: 1.1;
 }
 
+#app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 #controlPanel {
   padding: 1rem;
+  margin: 0 auto; /* This centers the div horizontally magic*/
 }
 
 #statusPanel {
   padding: 1rem;
+  margin: 0 auto;
+}
+
+#map2 {
+  width: 100%;
+  height: 100vh;
 }
 
 #map {
-  width: 100%;
-  height: 100vh;
+  width: 500px;
+  height: 800px;
+  margin: 0 auto;
 }
 
 button {
