--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ h1 {
 
 #controlPanel {
   padding: 1rem;
-  margin: 0 auto; /* This centers the div horizontally magic*/
+  margin: 0 auto; /* this centers the div horizontally magic*/
 }
 
 #statusPanel {
@@ -51,14 +51,21 @@ h1 {
   margin: 0 auto;
 }
 
-#map2 {
+#mapOriginal {
   width: 100%;
   height: 100vh;
 }
 
 #map {
+  /* using this size for testing on desktop*/
   width: 500px;
-  height: 800px;
+  height: 700px;
+  margin: 0 auto;
+}
+
+#mapMobile {
+  width: 400px;
+  height: 600px;
   margin: 0 auto;
 }
 
