--- a/src/style.css
+++ b/src/style.css
@@ -58,8 +58,8 @@ h1 {
 
 #map {
   /* using this size for testing on desktop*/
-  width: 500px;
-  height: 700px;
+  width: 100%;
+  height: 600px;
   margin: 0 auto;
 }
 
